--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -11,26 +11,20 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Portfolio Project 2</h1>
+            <h1>Vansbags</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-8 col-md-8 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="img/portfolio/full/1.jpg" alt="" />
+                        <img src="img/portfolio/full/vans1.jpg" alt="" />
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/2.jpg" alt="" />
-                    </div>
-                    <div class="item">
-                        <img src="img/portfolio/full/3.jpg" alt="" />
+                        <img src="img/portfolio/full/vans2.jpg" alt="" />
                     </div>
                 </div>
 
-                <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
-                </div>
 
                 <script type="text/javascript">
                     jQuery(document).ready(function($){
@@ -57,13 +51,10 @@
                         <h3>Description</h3>
                     </div>
                     <ul class="project-general-info">
-                        <li><p><i class="fa fa-user"></i> Alex Smith</p></li>
-                        <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
-                        <li><p><i class="fa fa-calendar"></i> 25 december, 2016</p></li>
+                        <li><p><i class="fa fa-user"></i> Reza Mandala</p></li>
+                        <li><p><i class="fa fa-globe"></i> <a href="https://design.vansbags.com/" target="_blank">Vansbags</a></p></li>
+                        <li><p><i class="fa fa-calendar"></i> 2021</p></li>
                     </ul>
-
-                    <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-                    <!-- /Project Description -->
 
                     <!-- Technology -->
                     <div class="tags-block">
@@ -71,25 +62,14 @@
                             <h3>Technology</h3>
                         </div>
                         <ul class="tags">
-                            <li><a>HTML5</a></li>
-                            <li><a>CSS3</a></li>
+                            <li><a>Codeigniter</a></li>
+                            <li><a>Bootstrap</a></li>
                             <li><a>jQuery</a></li>
                             <li><a>Ajax</a></li>
-                            <li><a>PHP5</a></li>
+                            <li><a>Postgresql</a></li>
                         </ul>
                     </div>
-                    <!-- /Technology -->
 
-                    <!-- Share Buttons -->
-                    <div class="btn-group share-buttons">
-                        <div class="block-title">
-                            <h3>Share</h3>
-                        </div>
-                        <a href="#" target="_blank" class="btn"><i class="fab fa-facebook-f"></i> </a>
-                        <a href="#" target="_blank" class="btn"><i class="fab fa-twitter"></i> </a>
-                        <a href="#" target="_blank" class="btn"><i class="fab fa-dribbble"></i> </a>
-                    </div>
-                    <!-- /Share Buttons -->
                 </div>
                 <!-- Project Description -->
             </div>
