--- a/portfolio-5.html
+++ b/portfolio-5.html
@@ -2,8 +2,8 @@
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
             <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="portfolio-2.html"><i class="lnr lnr-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-4.html"><i class="lnr lnr-chevron-right"></i></a>
+                <a class="ajax-page-load" href="portfolio-4.html"><i class="lnr lnr-chevron-left"></i></a>
+                <a class="ajax-page-load" href="portfolio-6.html"><i class="lnr lnr-chevron-right"></i></a>
             </div>
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
@@ -11,23 +11,19 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Angkring Solo</h1>
+            <h1>Digital Agency</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-8 col-md-8 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="img/portfolio/full/angkring1.jpg" alt="" />
+                        <img src="img/portfolio/full/agency1.jpg" alt="" />
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/angkring2.jpg" alt="" />
-                    </div>
-                    <div class="item">
-                        <img src="img/portfolio/full/angkring3.jpg" alt="" />
+                        <img src="img/portfolio/full/agency2.jpg" alt="" />
                     </div>
                 </div>
-
 
                 <script type="text/javascript">
                     jQuery(document).ready(function($){
@@ -55,7 +51,7 @@
                     </div>
                     <ul class="project-general-info">
                         <li><p><i class="fa fa-user"></i> Reza Mandala</p></li>
-                        <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">Angkring Solo</a></p></li>
+                        <li><p><i class="fa fa-globe"></i> <a href="https://rezamandala.github.io/portfolio/digital-agency" target="_blank">Digital Agency</a></p></li>
                         <li><p><i class="fa fa-calendar"></i> 2020</p></li>
                     </ul>
 
@@ -65,11 +61,11 @@
                             <h3>Technology</h3>
                         </div>
                         <ul class="tags">
-                            <li><a>Codeigniter</a></li>
-                            <li><a>Bootstrap</a></li>
+                            <li><a>HTML5</a></li>
+                            <li><a>CSS3</a></li>
                             <li><a>jQuery</a></li>
                             <li><a>Ajax</a></li>
-                            <li><a>Mysql</a></li>
+                            <li><a>PHP5</a></li>
                         </ul>
                     </div>
 
